scrollbar styles prop types(fix)

--- a/src/App.css
+++ b/src/App.css
@@ -9,6 +9,18 @@ p {
   padding: 0;
 }
 
+.header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 20px 30px;
+  box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
+  position: sticky;
+  top: 0;
+  z-index: 1000;
+  background-color: white;
+}
+
 div:has(> select) {
   display: flex;
   flex-direction: row;
@@ -148,13 +160,14 @@ h1 {
   padding: 15px 30px;
   border-radius: 5px;
   box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
-  transition: all 0.5s ease-in-out;
+  transition: all 1s ease-in-out;
+  scroll-behavior: smooth;
 }
 
 .product:hover {
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
   cursor: pointer;
-  transform: scale(1.02);
+  transform: scale(1.05);
 }
 
 .product div {
@@ -172,6 +185,10 @@ h1 {
   margin: 0;
   text-align: justify;
   font-size: 16px;
+}
+
+span {
+  font-weight: 600;
 }
 
 .modal {
@@ -214,6 +231,23 @@ h1 {
   & p {
     text-align: justify;
   }
+}
+
+.no-scroll {
+  overflow: hidden;
+}
+
+.modal-content::-webkit-scrollbar {
+  width: 15px;
+}
+
+.modal-content::-webkit-scrollbar-track {
+  background-color: rgb(200, 202, 204);
+  border-radius: 10px;
+}
+.modal-content::-webkit-scrollbar-thumb {
+  background-color: rgba(24, 32, 42, 0.87);
+  border-radius: 5px;
 }
 
 .modal-product-description {
@@ -261,7 +295,19 @@ h1 {
   }
 }
 
+.quantity-button {
+
+}
+
 @media only screen and (max-width: 426px) {
+  .header {
+    display: grid;
+    grid-template-columns: 1fr;
+    gap: 10px;
+    padding: 10px;
+    
+  }
+
   .modal-content {
     padding: 0;
     & div {
