--- a/src/index.css
+++ b/src/index.css
@@ -34,7 +34,22 @@ body {
   min-width: 320px;
   min-height: 100vh;
   overflow-x: hidden;
+  scroll-behavior: smooth;
+}
 
+body::-webkit-scrollbar {
+  width: 20px;
+  padding: 5px;
+}
+
+body::-webkit-scrollbar-track {
+  background-color: rgb(200, 202, 204);
+  border-radius: 10px;
+  padding: 5px;
+}
+body::-webkit-scrollbar-thumb {
+  background-color: rgba(24, 32, 42, 0.87);
+  border-radius: 5px;
 }
 
 h1 {
@@ -45,8 +60,8 @@ h1 {
 button {
   border-radius: 8px;
   border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
+  padding: clamp(0.2em, 1em, 1rem) 1.2em;
+  font-size: clamp(0.5rem, 12px, 1.5rem);
   font-weight: 500;
   font-family: inherit;
   background-color: #1a1a1a;
